--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jstink",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "",
     "main": "src/index.js",
     "scripts": {
@@ -22,5 +22,6 @@
     "repository": {
         "type": "git",
         "url": "https://github.com/andycaine/jstink"
-    }
+    },
+    "keywords": ["cryptography", "aes", "gcm", "tink", "crypto", "encryption", "decryption"]
 }
