--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "jstink",
-    "version": "1.1.2",
-    "description": "",
+    "version": "1.1.3",
+    "description": "A simple, easy-to-use Javascript crytopgraphy library.",
     "main": "src/index.js",
     "scripts": {
         "test": "jest",
