--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jstink",
-    "version": "1.1.3",
+    "version": "1.1.4",
     "description": "A simple, easy-to-use Javascript crytopgraphy library.",
     "main": "src/index.js",
     "scripts": {
@@ -16,12 +16,20 @@
         "testEnvironment": "node"
     },
     "dependencies": {
-        "@aws-sdk/client-kms": "^3.555.0",
-        "google-protobuf": "^3.21.2"
+        "@aws-sdk/client-kms": "^3.620.1",
+        "google-protobuf": "^3.21.4"
     },
     "repository": {
         "type": "git",
         "url": "https://github.com/andycaine/jstink"
     },
-    "keywords": ["cryptography", "aes", "gcm", "tink", "crypto", "encryption", "decryption"]
+    "keywords": [
+        "cryptography",
+        "aes",
+        "gcm",
+        "tink",
+        "crypto",
+        "encryption",
+        "decryption"
+    ]
 }
